--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -27,6 +27,13 @@
 
 import /init.recovery.qcom_decrypt.rc
 
+service overrideprops /system/bin/overrideprops.sh
+    user root
+    group root
+    disabled
+    oneshot
+    seclabel u:r:recovery:s0
+
 service vendor.qti.vibrator /system/bin/vendor.qti.hardware.vibrator.service
     user root
     group root
@@ -67,6 +74,7 @@ on fs
     chmod 0666  /sys/bus/i2c/drivers/aw8624_haptic/2-005a/custom_wave
 
 on boot
+    start overrideprops
     start variant-script
     start health-hal-2-1
     start vendor.qti.vibrator
